Pulling over add_or_update_spec.py fixes from preview
Fixes include:
1. Speciying the Makefile location
2. Adding the spec_name to the path of the preprocessor to avoid spec filename collisions

--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,7 @@
                 <!-- Old layout: 20160918/<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/core/20160918/${coreservices-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${coreservices-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/core/${coreservices-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -314,8 +314,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${coreservices-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${coreservices-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/core/${coreservices-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/core/${coreservices-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -334,7 +334,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/identity/${identity-control-plane-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${identity-control-plane-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/identity/${identity-control-plane-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -344,8 +344,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${identity-control-plane-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${identity-control-plane-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/identity/${identity-control-plane-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/identity/${identity-control-plane-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -364,7 +364,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/objectstorage/${casper-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${casper-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/objectstorage/${casper-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -374,8 +374,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${casper-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${casper-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/objectstorage/${casper-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/objectstorage/${casper-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -394,7 +394,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/lb/${oralb-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${oralb-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/lb/${oralb-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -404,8 +404,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${oralb-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${oralb-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/lb/${oralb-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/lb/${oralb-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -424,7 +424,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/database/${dbaas-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${dbaas-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/database/${dbaas-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -434,8 +434,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${dbaas-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${dbaas-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/database/${dbaas-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/database/${dbaas-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -454,7 +454,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/audit/${hemlock-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${hemlock-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/audit/${hemlock-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -464,8 +464,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${hemlock-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${hemlock-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/audit/${hemlock-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/audit/${hemlock-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -484,7 +484,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/filestorage/${fss-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${fss-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/filestorage/${fss-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -494,8 +494,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${fss-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${fss-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/filestorage/${fss-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/filestorage/${fss-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -514,7 +514,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/dns/${public-dns-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${public-dns-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/dns/${public-dns-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -524,8 +524,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${public-dns-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${public-dns-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/dns/${public-dns-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/dns/${public-dns-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -544,7 +544,7 @@
                 <!-- Old layout: ./<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/email/${email-api-spec.spec.name}</inputFile>
               </inputFiles>
-              <outputFile>${preferred.temp.dir}/${email-api-spec.spec.name}</outputFile>
+              <outputFile>${preferred.temp.dir}/email/${email-api-spec.spec.name}</outputFile>
             </configuration>
           </execution>
           <execution>
@@ -554,8 +554,8 @@
               <goal>preprocess</goal>
             </goals>
             <configuration>
-              <inputFile>${preferred.temp.dir}/${email-api-spec.spec.name}</inputFile>
-              <outputFile>${preprocessed.temp.dir}/${email-api-spec.spec.name}</outputFile>
+              <inputFile>${preferred.temp.dir}/email/${email-api-spec.spec.name}</inputFile>
+              <outputFile>${preprocessed.temp.dir}/email/${email-api-spec.spec.name}</outputFile>
               <groupFile>${enabled.groups.file}</groupFile>
             </configuration>
           </execution>
@@ -572,7 +572,7 @@
                       <inputFile>${spec.temp.dir}/containerengine/source/${clusters-api-spec.spec.name}</inputFile>
                       <inputFile>${spec.temp.dir}/containerengine/${clusters-api-spec.spec.name}</inputFile>
                   </inputFiles>
-                  <outputFile>${preferred.temp.dir}/${clusters-api-spec.spec.name}</outputFile>
+                  <outputFile>${preferred.temp.dir}/containerengine/${clusters-api-spec.spec.name}</outputFile>
               </configuration>
           </execution>
           <execution>
@@ -582,8 +582,8 @@
                   <goal>preprocess</goal>
               </goals>
               <configuration>
-                  <inputFile>${preferred.temp.dir}/${clusters-api-spec.spec.name}</inputFile>
-                  <outputFile>${preprocessed.temp.dir}/${clusters-api-spec.spec.name}</outputFile>
+                  <inputFile>${preferred.temp.dir}/containerengine/${clusters-api-spec.spec.name}</inputFile>
+                  <outputFile>${preprocessed.temp.dir}/containerengine/${clusters-api-spec.spec.name}</outputFile>
                   <groupFile>${enabled.groups.file}</groupFile>
               </configuration>
           </execution>
@@ -600,7 +600,7 @@
                       <inputFile>${spec.temp.dir}/resourcesearch/source/${resource-query-service-spec.spec.name}</inputFile>
                       <inputFile>${spec.temp.dir}/resourcesearch/${resource-query-service-spec.spec.name}</inputFile>
                   </inputFiles>
-                  <outputFile>${preferred.temp.dir}/${resource-query-service-spec.spec.name}</outputFile>
+                  <outputFile>${preferred.temp.dir}/resourcesearch/${resource-query-service-spec.spec.name}</outputFile>
               </configuration>
           </execution>
           <execution>
@@ -610,8 +610,8 @@
                   <goal>preprocess</goal>
               </goals>
               <configuration>
-                  <inputFile>${preferred.temp.dir}/${resource-query-service-spec.spec.name}</inputFile>
-                  <outputFile>${preprocessed.temp.dir}/${resource-query-service-spec.spec.name}</outputFile>
+                  <inputFile>${preferred.temp.dir}/resourcesearch/${resource-query-service-spec.spec.name}</inputFile>
+                  <outputFile>${preprocessed.temp.dir}/resourcesearch/${resource-query-service-spec.spec.name}</outputFile>
                   <groupFile>${enabled.groups.file}</groupFile>
               </configuration>
           </execution>
@@ -634,7 +634,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${identity-control-plane-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/identity/${identity-control-plane-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>identity</basePackage>
@@ -653,7 +653,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${coreservices-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/core/${coreservices-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>core</basePackage>
@@ -673,7 +673,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${oralb-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/lb/${oralb-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>loadbalancer</basePackage>
@@ -693,7 +693,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${casper-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/objectstorage/${casper-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>objectstorage</basePackage>
@@ -712,7 +712,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${dbaas-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/database/${dbaas-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>database</basePackage>
@@ -731,7 +731,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${hemlock-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/audit/${hemlock-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
 	      <specGenerationType>${generationType}</specGenerationType>
               <basePackage>audit</basePackage>
@@ -750,7 +750,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${fss-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/filestorage/${fss-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
               <specGenerationType>${generationType}</specGenerationType>
               <basePackage>filestorage</basePackage>
@@ -769,7 +769,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${public-dns-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/dns/${public-dns-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
               <specGenerationType>${generationType}</specGenerationType>
               <basePackage>dns</basePackage>
@@ -788,7 +788,7 @@
             </goals>
             <configuration>
               <language>oracle-go-sdk</language>
-              <specPath>${preprocessed.temp.dir}/${email-api-spec.spec.name}</specPath>
+              <specPath>${preprocessed.temp.dir}/email/${email-api-spec.spec.name}</specPath>
               <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
               <specGenerationType>${generationType}</specGenerationType>
               <basePackage>email</basePackage>
@@ -807,7 +807,7 @@
               </goals>
               <configuration>
                   <language>oracle-go-sdk</language>
-                  <specPath>${preprocessed.temp.dir}/${clusters-api-spec.spec.name}</specPath>
+                  <specPath>${preprocessed.temp.dir}/containerengine/${clusters-api-spec.spec.name}</specPath>
                   <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
                   <basePackage>containerengine</basePackage>
                   <specGenerationType>${generationType}</specGenerationType>
@@ -827,7 +827,7 @@
               </goals>
               <configuration>
                   <language>oracle-go-sdk</language>
-                  <specPath>${preprocessed.temp.dir}/${resource-query-service-spec.spec.name}</specPath>
+                  <specPath>${preprocessed.temp.dir}/resourcesearch/${resource-query-service-spec.spec.name}</specPath>
                   <outputDir>${env.GOPATH}/src/${fullyQualifiedProjectName}</outputDir>
                   <specGenerationType>${generationType}</specGenerationType>
                   <basePackage>resourcesearch</basePackage>
