Fix for DEXREQ-96: Removing old reference to ./20160918/*.yml for the preprocessor when generating the core spec

--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,7 @@
                 <!-- New layout: source/<spec.proto.yaml> -->
                 <inputFile>${spec.temp.dir}/core/source/${coreservices-api-spec.spec.name}</inputFile>
                 <!-- Old layout: 20160918/<spec.proto.yaml> -->
-                <inputFile>${spec.temp.dir}/core/20160918/${coreservices-api-spec.spec.name}</inputFile>
+                <inputFile>${spec.temp.dir}/core/${coreservices-api-spec.spec.name}</inputFile>
               </inputFiles>
               <outputFile>${preferred.temp.dir}/core/${coreservices-api-spec.spec.name}</outputFile>
             </configuration>
