--- a/wercker.yml
+++ b/wercker.yml
@@ -8,8 +8,8 @@ build:
         - script:
              name: golint-prepare
              code: |
-                 go get github.com/golang/lint/golint
-                 go install github.com/golang/lint/golint
+                 go get golang.org/x/lint/golint
+                 go install golang.org/x/lint/golint
 
         - script:
              name: symlinking src code
@@ -19,8 +19,8 @@ build:
                  ls -al $GOPATH/src/github.com/oracle/oci-go-sdk
 
         - script:
-             name: make-build
+             name: make-test
              code: |
-                 make build
+                 make test
 
 
