Adds dependencies for testing to build process

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,7 @@ build:
              code: |
                  go get golang.org/x/lint/golint
                  go install golang.org/x/lint/golint
+                 go get -v github.com/stretchr/testify
 
         - script:
              name: symlinking src code
