DEX-5761: Adds missing autotest due to missconfiguration

--- a/pom.xml
+++ b/pom.xml
@@ -1113,7 +1113,7 @@
         <artifactId>bmc-sdk-swagger-maven-plugin</artifactId>
         <version>1.73-SNAPSHOT</version>
         <configuration>
-          <isTestGenerationEnabled>false</isTestGenerationEnabled>
+          <isTestGenerationEnabled>true</isTestGenerationEnabled>
         </configuration>
         <executions>
           <execution>
